# cfd-visualiser

./: .env.example  .gitignore  CLAUDE.md  observablehq.config.js  package-lock.json  package.json  pyproject.toml  wrangler.toml
.github/workflows/: ci.yml  daily.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-pipeline-first-chart/: 01-01-SUMMARY.md  01-01-store-schema-units-PLAN.md  01-02-SUMMARY.md  01-02-fetch-validate-archive-PLAN.md  01-03-SUMMARY.md  01-03-framework-scaffold-editorial-PLAN.md  01-04-SUMMARY.md  01-04-chart-builder-and-page-PLAN.md  01-05-SUMMARY.md  01-05-ci-deploy-keepalive-PLAN.md  01-RESEARCH.md  01-UI-SPEC.md  01-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: OPS.md  visualisation-scope.md
pipeline/: README.md  __init__.py  __main__.py  build_chart_3c.py  build_meta.py  build_og_image.py  editorial.py  fetch.py  schema.py  store.py  units.py  validate.py
src/: index.md
src/assets/: custom.css
src/charts/: scissors.md
src/content/: captions.json  glossary.json
src/data/: chart-3c.json  chart-3c.json.py  meta.json  meta.json.py
tests/: conftest.py  test_build_chart_3c.py  test_build_meta.py  test_build_og_image.py  test_editorial_grammar.py  test_fetch.py  test_pipeline_main.py  test_schema.py  test_site_artefacts.py  test_store.py  test_units.py  test_validate.py
tests/fixtures/: captions_invalid.json  captions_valid.json  cfd_sample.csv
