[project]
name = "lowcarboncontracts"
version = "0.1.0"
description = "CfD Visualiser — UK CfD cost and generation charts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "duckdb>=1.5.2",
    "httpx>=0.28.0",
    "pyarrow>=20.0.0",
    "pytest>=8.0.0",
]
